--- a/app/views/cards/_card_table.html.erb
+++ b/app/views/cards/_card_table.html.erb
@@ -9,6 +9,6 @@
     </tr>
   </thead>
   <tbody>
-    <%= render collection:@cards, partial:"cards/card_row" %>
+    <%= render collection:cards, partial:"cards/card_row" %>
   </tbody>
 </table>
