--- a/app/views/import/index.html.erb
+++ b/app/views/import/index.html.erb
@@ -1,1 +1,5 @@
+<%= form_for @import do |f| %>
 <h1>Import</h1>
+    <%= f.text_area(:import_input, rows: 15)%>
+    <%= f.submit "Submit" %>
+<% end %>
