--- a/app/views/import/create.html.erb
+++ b/app/views/import/create.html.erb
@@ -1,3 +1,3 @@
 <h1>Imported cards</h1>
-<%= generate_return_message(@cards) if !@cards.nil? %>
+<%= ImportHelper.generate_return_message(@cards) if !@cards.nil? %>
 <%= @error[:message] if !@error.nil? %>
