--- a/app/views/imports/index.html.erb
+++ b/app/views/imports/index.html.erb
@@ -1,6 +1,9 @@
 <%= form_for @import do |f| %>
 <h1>Import</h1>
-    <%= f.text_area(:import_input, rows: 15)%>
+    <% @labels.each do |label| %>
+        <%= f.text_field label[:name] %>
+        <br/>
+    <% end %>
     <%= f.submit "Submit" %>
     <%= @error&.message %>
 <% end %>
